2008-03-23  Andreas Schwab  <schwab@suse.de>

	* menu-bar.el (menu-bar-showhide-fringe-ind-menu) [mixed]: Fix
	radio button condition.
	[box]: Likewise.

2008-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-print-log): Ensure it works when passed a
	single file argument.
	(vc-bzr-show-log-entry): Fix typo.

2008-03-19  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-easy-menu-filter): New
	function.
	(verilog-stmt-menu, verilog-menu): Add :help.
	(verilog-customize, verilog-font-customize)
	(electric-verilog-backward-sexp, electric-verilog-forward-sexp)
	(verilog-mode): Update documentation strings to match tool tips.
	(verilog-auto-search-do, verilog-auto-re-search-do)
	(verilog-skip-forward-comment-or-string): Fix verilog-auto
	expansion when a .* appears inside a string.
	(verilog-re-search-forward, verilog-re-search-backward): Add
	comment to recall how this works.

2008-03-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* net/tls.el (open-tls-stream): Reindent.

2008-03-19  Glenn Morris  <rgm@gnu.org>

	* net/tls.el: Don't require rx when compiling.
	(tls-end-of-info): Rewrite without using rx.
	(open-tls-stream): Use with-current-buffer.

2008-03-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* font-lock.el (font-lock-comment-face): Set the foreground for
	the light background 8 colors case.

	* vc-bzr.el (vc-bzr-print-log): Insert a file marker.  Run the log
	command for each file in the list.
	(vc-bzr-log-view-mode): Recognize the file marker.
	(vc-bzr-show-log-entry): Make regexp match more cases.

2008-03-18  Wilson Snyder  <wsnyder@wsnyder.org>

	* verilog-mode.el (verilog-read-decls): Fix AUTOINPUT/AUTOOUTPUT
	mis-including genvars.

2008-03-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-log-view-mode, vc-bzr-annotate-command)
	(vc-bzr-annotate-time, vc-bzr-annotate-extract-revision-at-line):
	Revision numbers can include ".".

	* diff-mode.el (diff-end-of-hunk): Be careful not to overlook trailing